# monty-assignment

./: .env.example  README.md  pyproject.toml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  carts.py  dummy.py  orders.py  products.py  stripe.py  upload.py  users.py
app/common/: dao.py  exceptions.py  schemas.py
app/core/: db.py  settings.py
app/dummy/: models.py  services.py
app/features/auth/: schemas.py  services.py
app/features/carts/: dao.py  models.py  schemas.py  services.py
app/features/dummy/: models.py  schemas.py
app/features/orders/: dao.py  models.py  schemas.py  services.py
app/features/products/: dao.py  models.py  schemas.py  services.py
app/features/upload/: schemas.py  services.py
app/features/users/: dao.py  models.py  schemas.py  services.py
app/integrations/stripe/: schemas.py  services.py
